--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,11 +17,13 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2017",
+    "types":["highcharts"],
     "module": "es2020",
     "lib": [
       "es2020",
       "dom"
     ]
+    
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
